--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: java
-jdk: oraclejdk9
+jdk: oraclejdk11
+before_install:
+- sudo apt-get install -y ant
+- sudo apt-get install -y ant-optional
